# tgl

./: .gitignore  Makefile.am  Makefile.in  autogen.sh  configure.ac  tgl-eventloop.c  tgl-eventloop.h  tgl-layout.h  tgl-net.c  tgl-net.h  tgl-serialize.c  tgl-serialize.h  tgl.c  tgl.h  tools.h
pytgl/: __init__.py  callbacks.py  constants.py  telegram.py  tgl.py
pytgl/utils/: mkconstants.py
scripts/: pytgl-example.py
